# value-agent

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  api.py  company_agent.py  eval_sectors.py  gics.md  industry_agent.py  judge_agent.py  models.py  orchestrator.py  pyproject.toml  search.py  sector_agent.py
adapters/edgar/: __init__.py  client.py
adapters/local/: blob_store.py
adapters/r2/: blob_store.py
adapters/serper/: search_client.py
adapters/sqlite/: __init__.py  base.py  repository.py  seed.py
agents/: company_agent.py  deps.py  judge_agent.py  market_share_agent.py  research.py  sector_agent.py  source_guard.py  sub_industry_agent.py
app/: .dockerignore  App.tsx  Dockerfile  app.json  eas.json  package-lock.json  package.json
domain/: __init__.py  company.py  gics_reference.py  market_share.py  sector.py  sub_industry.py
evals/: eval_company.py  eval_market_share.py
ports/: __init__.py  blob_store.py  repository.py  search_client.py
tools/: __init__.py  dates.py  web.py
