[project]
name = "value-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-ai",
    "logfire[httpx]",
    "httpx",
    "python-dotenv",
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "aiosqlite>=0.22.1",
    "edgartools>=5.39.1",
]
